# trusted-agent-procurement

./: .env.example  .gitignore  HACKATHON_SUBMISSION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  demo-script.md
examples/: jsonrpc_client.py
src/agentid_verify/: __init__.py  _claims.py  _did.py  _errors.py  _verify.py
src/trusted_agent_procurement/: __init__.py  cloudforge.py  demo.py  identity.py  integrations.py  models.py  payments.py  server.py
tests/: test_identity.py  test_integrations.py  test_procurement.py  test_server.py
