[project]
name = "trusted-agent-procurement"
version = "0.1.0"
description = "Hackathon MVP for trusted agent-to-agent procurement with passports, budgets, and Stripe-style payments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "base58>=2.1.1",
    "pynacl>=1.5.0",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.28.1",
]

[project.scripts]
trusted-agent-demo = "trusted_agent_procurement.demo:main"
trusted-agent-server = "trusted_agent_procurement.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
